<resources>
    <string name="app_name">Мои счетчики</string>
    <string name="title_activity_login">Вход</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="login">"Войти"</string>
    <string name="create_account">"Создать аккаунт"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registrate">Создание Аккаунта</string>
    <string name="invalid_firstName">Not a valid Name</string>
    <string name="invalid_lastName">Not a valid Surname</string>
    <string name="invalid_middleName">Not a valid Middle Name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="title_activity_main">Мои счетчики</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мои счетчики</string>
    <string name="nav_header_subtitle">meterreadindapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dateErrorText">Неверная дата</string>

    <string name="menu_home">Мои показания</string>
    <string name="menu_meters">Cчетчики</string>
    <string name="menu_services">Компании</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_user">Аккаунт</string>
    <string name="menu_logout">Выйти</string>

    <string name="no_internet_connection">Please check an internet connection</string>
    <string name="first_user_authorise">First user authorisation</string>
    <string name="no_user_found_in_db">No user found</string>
    <string name="meter_not_added">Счетчик не был сохранен</string>
    <string name="meter_reading_not_added">Показание не было сохранено</string>
    <string name="service_not_added">Компания не была сохранено</string>
</resources>
