<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_meters"
            android:icon="@drawable/ic_meter"
            android:title="@string/menu_meters" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_service"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notifications" />
    </group>

    <item android:title="Настройки">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_user" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
